[gd_scene load_steps=9 format=2]

[ext_resource path="res://resources/Theme.tres" type="Theme" id=1]
[ext_resource path="res://resources/DynamicFonts/conduit.tres" type="DynamicFont" id=2]
[ext_resource path="res://resources/DynamicFonts/menu.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/control/Button.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/control/Options.gd" type="Script" id=5]
[ext_resource path="res://sounds/Audio/click_001.ogg" type="AudioStream" id=6]
[ext_resource path="res://sounds/Audio/click_002.ogg" type="AudioStream" id=7]

[sub_resource type="Animation" id=1]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0823529, 0.0941176, 0.109804, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 7.0
margin_top = 5.0
margin_right = 360.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0.2, 0.2, 0.2, 1 )
text = "OPTIONS
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Open" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="Close" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.5
margin_top = -134.5
margin_right = 108.5
margin_bottom = 134.5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_right = 217.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 2 )
text = "RESUME"

[node name="Settings" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 68.0
margin_right = 217.0
margin_bottom = 132.0
custom_fonts/font = ExtResource( 2 )
text = "SETTINGS"

[node name="Disconnect" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 136.0
margin_right = 217.0
margin_bottom = 200.0
custom_fonts/font = ExtResource( 2 )
text = "DISCONNECT"

[node name="Quit" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 204.0
margin_right = 217.0
custom_fonts/font = ExtResource( 2 )
text = "QUIT"

[node name="AcceptDialog" type="ConfirmationDialog" parent="."]
margin_right = 160.0
margin_bottom = 80.0
theme = ExtResource( 1 )
window_title = "Quit"
dialog_text = "Quit now?"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Disconnect" to="." method="_on_Disconnect_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="confirmed" from="AcceptDialog" to="." method="_on_AcceptDialog_confirmed"]
